packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_combine@spantrace-backtrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

u16 (other)
│ 📌 tests/test_debug.rs:273:14
├─▶ u64
│   ╰ 📌 tests/test_debug.rs:272:14
├─▶ u32
│   ╰ 📌 tests/test_debug.rs:271:14
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
├─▶ spantrace with 2 frames (1)
│   ╰ 📌 tests/common.rs:140:5
╰─▶ backtrace with 18 frames (1)
    ╰ 📌 tests/common.rs:140:5

