packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_combine@spantrace.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
u16 (other)
| @ tests/test_debug.rs:334:14
|-> u64
|   > @ tests/test_debug.rs:333:14
|-> u32
|   > @ tests/test_debug.rs:332:14
|-> Root error
|   > @ tests/common.rs:140:5
\-> spantrace with 2 frames (1)
    > @ tests/common.rs:140:5
