packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_context@backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

unsigned 32bit integer (No. 0)
| @ tests/test_debug.rs:240:38
|-> Root error
|   > @ tests/common.rs:140:5
\-> backtrace with 12 frames (1)
    > @ tests/common.rs:140:5

