packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_context@glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

unsigned 32bit integer (No. 0)
│ 📌 tests/test_debug.rs:241:38
╰─▶ Root error
    ╰ 📌 tests/common.rs:140:5

