packages/libs/error-stack/tests/snapshots/test_debug__hooks__hook_context@spantrace-glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
unsigned 32bit integer (No. 0)
│ tests/test_debug.rs:301:38
├─▶ Root error
│   ╰ tests/common.rs:140:5
╰─▶ spantrace with 2 frames (1)
    ╰ tests/common.rs:140:5
